tests/NormalTests/paczka1/fuzzy1/94849063.err
Error in line 4: 8plzn S130 70,1
Error in line 6: 8plzn S102 81,1
Error in line 16: S130 S740 63,2
Error in line 19: 8plzn S740 73,1
Error in line 21: mxFxAqdko0N S740 5,2
Error in line 33: o8eZwVZpQr S130 16,7
